---
source: tests/build_scripts/embedded_assets.rs
expression: static_content
snapshot_kind: text
---
#[must_use]
pub fn get_embedded_static_assets() -> std::collections::HashMap<String, &'static [u8]> {
    let mut assets = std::collections::HashMap::new();
    assets.insert("/css/style.css".to_string(), include_bytes!("[TEST_ROOT]/assets/css/style.css") as &[u8]);
    assets.insert("/js/app.js".to_string(), include_bytes!("[TEST_ROOT]/assets/js/app.js") as &[u8]);
    assets
}
